<resources>
    <string name="app_name">RickNMortyApp</string>
    <string name="id_text_view">Id:</string>
    <string name="name_text_view">Name:</string>
    <string name="specie_text_view">Specie:</string>
    <string name="picture_description">Picture</string>
    <string name="detailpicture">Character Picture</string>
    <string name="status_text_view">Status:</string>
    <string name="type_text_view">Type:</string>
    <string name="gender_text_view">Gender:</string>
    <string name="origin_text_view">Origin:</string>
    <string name="location_text_view">Location:</string>
    <string name="loadstateText">Results could not be loaded</string>
    <string name="loadStatebutton">Retry</string>
</resources>